--- a/AcupOfSugar/package.json
+++ b/AcupOfSugar/package.json
@@ -4,7 +4,8 @@
   "description": "Capstone Project , Food Sharing App ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "nodemon -L -e ts --watch '**/*.ts' --exec 'npm run build && node ./build/server.js'"
   },
   "repository": {
     "type": "git",
