--- a/AcupOfSugar/package.json
+++ b/AcupOfSugar/package.json
@@ -35,9 +35,11 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "helmet": "^3.18.0",
     "mongoose": "^5.6.4",
     "morgan": "^1.9.1",
+    "typegoose": "^5.8.1",
     "uuid": "^3.3.2"
   }
 }
