--- a/AcupOfSugar/tsconfig.json
+++ b/AcupOfSugar/tsconfig.json
@@ -3,7 +3,9 @@
     "outDir": "./build",
     "sourceMap": true,
     "target": "es5",
-    "module": "commonjs"
+    "module": "commonjs",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     },
     "include": [
     "./**/*"
