--- a/cup_of_sugar_react/package.json
+++ b/cup_of_sugar_react/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-gesture-gallery": "^1.0.1",
     "react-gesture-responder": "^2.1.0",
+    "react-google-login": "^5.0.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-sticky": "^6.0.3",
