--- a/cup_of_sugar_react/package.json
+++ b/cup_of_sugar_react/package.json
@@ -5,16 +5,20 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "firebase": "^6.3.2",
     "mdbreact": "^4.18.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-firebaseui": "^3.1.2",
     "react-gesture-gallery": "^1.0.1",
     "react-gesture-responder": "^2.1.0",
     "react-google-login": "^5.0.4",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-sticky": "^6.0.3",
+    "react-stonecutter": "^0.3.10",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
