--- a/cup_of_sugar_react/package.json
+++ b/cup_of_sugar_react/package.json
@@ -14,6 +14,7 @@
     "react-gesture-gallery": "^1.0.1",
     "react-gesture-responder": "^2.1.0",
     "react-google-login": "^5.0.4",
+    "react-pose": "^4.0.8",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
